infrastructure/argo-workflows/argo-workflow-app.yaml
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: argo-server  
  namespace: argo  
spec:  
  selector:  
    matchLabels:  
      app: argo-server  
  template:  
    metadata:  
      labels:  
        app: argo-server  
    spec:  
      serviceAccountName: argo-server  
      containers:  
      - name: argo-server  
        image: quay.io/argoproj/argocli:v3.5.0  
        args:  
        - server  
        - --auth-mode=server  
        - --auth-mode=client  
        ports:  
        - containerPort: 2746  
          name: https  
---
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: postgres  
  namespace: argo  
spec:  
  selector:  
    matchLabels:  
      app: postgres  
  template:  
    metadata:  
      labels:  
        app: postgres  
    spec:  
      containers:  
      - name: postgres  
        image: postgres:13  
        ports:  
        - containerPort: 5432  
---
apiVersion: v1  
kind: Service  
metadata:  
  name: postgres  
  namespace: argo  
spec:  
  ports:  
  - port: 5432  
  selector:  
    app: postgres
